--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,23 +1,108 @@
-<html>
-  <head>
-    {% if title %}
-    <title>{{ title }} - boards archiving</title>
-    {% else %}
-    <title>Welcome to Chanarchive</title>
-    {% endif %}
-  </head>
-  <body>
-    <div>Chanarchive: <a href="/index">Home</a> - <a href="/login">Login</a></div>
-    <hr>
-    {% with messages = get_flashed_messages() %}
-      {% if messages %}
-        <ul>
-        {% for message in messages %}
-            <li>{{ message }} </li>
-        {% endfor %}
-        </ul>
-      {% endif %}
-    {% endwith %}
-    {% block content %}{% endblock %}
-  </body>
+<!doctype html>
+<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang=""> <![endif]-->
+<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8" lang=""> <![endif]-->
+<!--[if IE 8]>         <html class="no-js lt-ie9" lang=""> <![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js" lang=""> <!--<![endif]-->
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+        {% if title %}
+    	<title>{{ title }}</title>
+    	{% else %}
+    	<title>Welcome to ChanArchive</title>
+    	{% endif %}
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="apple-touch-icon" href="{{ url_for('static', filename='apple-touch-icon.png') }}">
+
+        <link rel="stylesheet" href="{{ url_for('static',filename='css/bootstrap.min.css') }}">
+        <style>
+            body {
+                padding-top: 50px;
+                
+            }
+        </style>
+        <link rel="stylesheet" href="{{ url_for('static',filename='css/bootstrap-theme.min.css') }}">
+        <link rel="stylesheet" href="{{ url_for('static',filename='css/lavish-bootstrap.css') }}">
+        <link rel="stylesheet" href="{{ url_for('static',filename='css/main.css') }}">
+
+        <script src="{{ url_for('static',filename='js/vendor/modernizr-2.8.3-respond-1.4.2.min.js') }}"></script>
+    </head>
+    <body>
+        <!--[if lt IE 8]>
+            <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+        <![endif]-->
+    <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">ChanArchive</a>
+        </div>
+        <div id="navbar" class="navbar-collapse collapse">
+          <ul class="nav navbar-nav">
+          <li><a href="#">Last Archives</a></li>
+          <li class="dropdown">
+            <a class="dropdown-toggle" aria-expanded="false" role="button" data-toggle="dropdown" href="#">
+              Boards
+              <span class="caret"></span>
+            </a>
+            <ul class="dropdown-menu" role="menu">
+            <li><a href="#">/b/</a></li>
+            <li><a href="#">/a/</a></li>
+            <li><a href="#">/fit/</a></li>
+            <li><a href="#">/s4s/</a></li>
+            <li><a href="#">/h/</a></li>
+  
+            <li class="divider"></li>
+            <li class="dropdown-header">Other chans soon</li>
+            </ul>
+          </li>
+          <li><a href="#">About</a></li>
+          </ul>
+          <p class="navbar-text navbar-right">Want to request a new board? <a href="/req">Click here</a></p>
+        </div><!--/.navbar-collapse -->
+      </div>
+    </nav>
+
+    <!-- Main jumbotron for a primary marketing message or call to action -->
+    <div class="jumbotron">
+      <div class="container text-center">
+        <h1>{{ title }}</h1>
+        {% block jumbo %}{% endblock %}
+      </div>
+    </div>
+    <div class="container">
+    <div class="row">
+			{% block content %}{% endblock %}
+			<hr>
+
+
+      <footer>
+      <div class="container">
+      <div class="row">
+        <div class="col-md-6">
+          <p class="text-left">ChanArchive is not related to the imageboards listed in its pages, every image is hosted in an external hosting service. This site is not responsable for the content of the archives.</p>
+        </div>
+        <div class="col-md-6">
+          <p class="text-right">&copy; ChanArchive 2015</p>
+      </div>
+      </div>
+      <div class="row">
+      <div class="col-md-12">
+      <small><p class="text-center"><strong>Statics :</strong> <em>Threads archived :</em> 0 | <em>Posts archived :</em> 0 | <em>Images archieved :</em> 0 | <em>Total thread views :</em> 0 </p></small>
+      </div>
+      </div>
+      </footer>
+    </div> <!-- /container -->      
+      <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+
+        <script src="{{ url_for('static', filename='js/vendor/bootstrap.min.js') }}"></script>
+
+        <script src="{{ url_for('static', filename='js/main.js') }}"></script>
+    </body>
 </html>
