--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<doctype html>
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang=""> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8" lang=""> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9" lang=""> <![endif]-->
@@ -41,7 +41,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">ChanArchive</a>
+          <a class="navbar-brand" href="{{ url_for('index') }}">ChanArchive</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
@@ -52,17 +52,14 @@
               <span class="caret"></span>
             </a>
             <ul class="dropdown-menu" role="menu">
-            <li><a href="#">/b/</a></li>
-            <li><a href="#">/a/</a></li>
-            <li><a href="#">/fit/</a></li>
-            <li><a href="#">/s4s/</a></li>
-            <li><a href="#">/h/</a></li>
-  
+            {% for board in config.CHAN_BOARDS %}
+            <li><a href="#">{{ board.short }}</a></li>
+  			{% endfor %}
             <li class="divider"></li>
             <li class="dropdown-header">Other chans soon</li>
             </ul>
           </li>
-          <li><a href="#">About</a></li>
+          <li><a href="{{ url_for('faq') }}">FAQ</a></li>
           </ul>
           <p class="navbar-text navbar-right">Want to request a new board? <a href="/req">Click here</a></p>
         </div><!--/.navbar-collapse -->
@@ -85,16 +82,18 @@
       <footer>
       <div class="container">
       <div class="row">
-        <div class="col-md-6">
+        <div class="col-md-6 col-xs-12">
           <p class="text-left">ChanArchive is not related to the imageboards listed in its pages, every image is hosted in an external hosting service. This site is not responsable for the content of the archives.</p>
         </div>
-        <div class="col-md-6">
+        <div class="col-md-6 col-xs-12">
           <p class="text-right">&copy; ChanArchive 2015</p>
       </div>
       </div>
-      <div class="row">
+      <div class="container-fluid">
+      <div class="row" style="background: #FFF;" >
       <div class="col-md-12">
-      <small><p class="text-center"><strong>Statics :</strong> <em>Threads archived :</em> 0 | <em>Posts archived :</em> 0 | <em>Images archieved :</em> 0 | <em>Total thread views :</em> 0 </p></small>
+      <small><p class="text-center" style="margin-top: 10px;"><strong>Statics :</strong> <em>Threads archived :</em> 0 | <em>Posts archived :</em> 0 | <em>Images archieved :</em> 0 | <em>Total thread views :</em> 0 </p></small>
+      </div>
       </div>
       </div>
       </footer>
