--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -6,9 +6,9 @@
         <form>
         <div class="formgroup">
          <label for="ThreadLink">Archive a thread</label>
-         <input type="text" class="form-control input-lg" id="ThreadLink" placeholder="Enter link" >
+         <input type="text" class="form-control input-lg" id="threadlink" placeholder="Enter link" >
          <select class="form-control input-lg" id="boardselect">
-         {% for board in boards %}
+         {% for board in config.CHAN_BOARDS %}
          <option>{{ board.short }}</option>
          {% endfor %}
          </select>
@@ -23,7 +23,7 @@
 </div>
 </div>
     <div class="container">
-      <!-- Example row of columns -->
+
       <div class="row">
         <div class="col-md-4">
           <h2>Latest threads</h2>
