--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -98,7 +98,7 @@
       </div>
       </footer>
     </div> <!-- /container -->      
-      <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+      <script type=text/javascript src="{{ url_for('static', filename='js/vendor/jquery-1-11-2-min.js') }}"></script>
 
         <script src="{{ url_for('static', filename='js/vendor/bootstrap.min.js') }}"></script>
 
